--- a/steer_bot_control/config/ctrl_ackermann_steering_controller.yaml
+++ b/steer_bot_control/config/ctrl_ackermann_steering_controller.yaml
@@ -11,8 +11,8 @@ ackermann_steering_controller:
     front_steer: 'front_steer_joint'
 
     # Geometry
-    wheel_separation_h: 0.40
-    wheel_radius: 0.1
+    wheel_separation_h: 2.5
+    wheel_radius: 0.5
 
     # Odometry calibration and tuning
     wheel_separation_h_multiplier: 1.0  # default: 1.0
@@ -20,15 +20,15 @@ ackermann_steering_controller:
     steer_pos_multiplier: 1.0           # default: 1.0
 
     # Odometry covariances for the encoder output of the robot.
-    pose_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 0.03]
-    twist_covariance_diagonal: [0.001, 0.001, 0.001, 0.001, 0.001, 0.03]
+    pose_covariance_diagonal: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0]
+    twist_covariance_diagonal: [0.0, 0.0, 0.0, 0.0, 0.0, 0.0]
 
     # Top level frame (link) of the robot description
-    base_frame_id: 'base_link'
+    base_frame_id: "base_link"
 
     # Transform from odom -> base_link
     enable_odom_tf: true
-    odom_frame_id: '/odom'
+    odom_frame_id: "/odom"
 
     # Set to false if the motor driver provides velocity data. 
     estimate_velocity_from_position: true
@@ -47,7 +47,7 @@ ackermann_steering_controller:
     angular:
         z:
             has_velocity_limits    : true
-            max_velocity           : 3.0   # rad/s
+            max_velocity           : 1.0   # rad/s
             has_acceleration_limits: true
             max_acceleration       : 3.0    # rad/s^2
 
