--- a/steer_bot_description/package.xml
+++ b/steer_bot_description/package.xml
@@ -12,5 +12,5 @@
     <buildtool_depend>catkin</buildtool_depend>
     <depend>urdf</depend>
     <depend>xacro</depend>
-    <exec_depend>roslaunch</exec_depend>
+    <depend>roslaunch</depend>
 </package>
